--- a/src/app/private/pages/home/components/cards-items/cards-items.component.html
+++ b/src/app/private/pages/home/components/cards-items/cards-items.component.html
@@ -1,13 +1,20 @@
 <ion-card>
   <ion-card-header>
-    <div class="flex-warp">
-      <ion-icon class="icon-warp" [name]="icon"></ion-icon>
-      <p class="title"> {{title}} </p>
-    </div>
+    <div class="grid">
+      <div class="flex-warp">
+        <ion-icon class="icon-warp" [name]="icon"></ion-icon>
+      </div>
 
-    <button class="btn" type="button" [routerLink]="[href]">
-      <ion-icon class="icon-view" name="eye-outline"></ion-icon>
-      <ion-text>Visitar</ion-text>
-    </button>
+      <div class="line"></div>
+
+      <div class="block-warp-2">
+        <p class="title"> {{title}} </p>
+        <p class="description">{{content}}</p>
+        <button class="btn" type="button" [routerLink]="[href]">
+          <ion-icon class="icon-view" name="eye-outline"></ion-icon>
+          <ion-text>Visitar</ion-text>
+        </button>
+      </div>
+    </div>
   </ion-card-header>
 </ion-card>
