diseño mejorado en la lista de cita de paciente

--- a/src/app/private/pages/vacunas-detalle/vacunas-detalle.page.html
+++ b/src/app/private/pages/vacunas-detalle/vacunas-detalle.page.html
@@ -40,7 +40,7 @@
       <ion-badge *ngIf="FormularioVacuna.get('fecha')?.hasError('required')" color="warning">Campo Obligatorio</ion-badge>
   </div>
     <ion-button  color="medium" type="submit" [disabled]="FormularioVacuna.invalid">
-      Actualizar
+      Actualizar Vacuna
     <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
     </ion-button>
   </form>
