--- a/src/app/private/pages/citas-medicas/components/card-citas/card-citas.component.scss
+++ b/src/app/private/pages/citas-medicas/components/card-citas/card-citas.component.scss
@@ -1,7 +1,9 @@
+
+
 div {
   background-color: #95a5a6a9;
   width: 350px;
-  height: 160px;
+  height: 180px;
   border-radius: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
@@ -39,35 +41,20 @@ ion-button{
 
 .label-fecha-final{
   position: relative;
-  left: 60px;
-  top: -30px;
+  left: 160px;
+  top: -50px;
   font-size: 15px;
 }
 
-.label-titulo2{
+
+.btn-observacion{
   position: relative;
-  left: 150px;
-  top: -60px;
-  font-size: 30px;
+  left: -135px;
+  top: -25px;
 }
 
-.label-fecha-final2{
+.btn-receta{
   position: relative;
-  left: 60px;
-  top: -30px;
-  font-size: 15px;
-}
-
-.label-titulo3{
-  position: relative;
-  left: 150px;
-  top: -60px;
-  font-size: 30px;
-}
-
-.label-fecha-final3{
-  position: relative;
-  left: 130px;
-  top: -70px;
-  font-size: 15px;
+  left: 20px;
+  top: -69px;
 }
