--- a/src/app/private/pages/home/components/cards-items/cards-items.component.scss
+++ b/src/app/private/pages/home/components/cards-items/cards-items.component.scss
@@ -1,7 +1,8 @@
+
 ion-card {
   margin: 20px;
   border-radius: 12px;
-  background: #e9e6e6;
+  background: #ffffffcb;
 }
 
 .grid {
@@ -12,15 +13,14 @@ ion-card {
 
 .title {
   font-weight: 700;
-  font-size: 18px;
-  margin-top: -5px;
+  font-size: 19px;
 }
 
 .description {
   font-weight: 500;
   font-size: 15px;
   margin-top: -12px;
-  color: black;
+  color: rgb(78, 78, 78);
 }
 
 .flex-warp {
@@ -31,14 +31,13 @@ ion-card {
 .icon-warp {
   width: 50px;
   height: 50px;
-
   border-radius: 8px;
-  color: #F39C12
+  color: #f1b24d;
 }
 
 .line {
   min-width: 3px;
-  background: #F39C12;
+  background: #2ECC71;
   border-radius: 8px;
 }
 
@@ -49,15 +48,42 @@ ion-card {
 
 .btn {
   display: flex;
+  justify-content: end;
   align-items: center;
   gap: 5px;
   font-weight: 700;
   font-size: 14px;
   color: #F39C12;
-  background: #e9e6e6;
+  background-color: transparent;
   margin-top: -6px;
+  animation: bannerAnimation 2s linear infinite;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+@keyframes bannerAnimation {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.03);
+  }
+}
+
+
+.btn-end{
+  width: 100%;
+  display: flex;
+  justify-content: end;
 }
 
 .icon-view {
   font-size: 20px;
 }
+
+
+
+
+
+
