--- a/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
+++ b/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
@@ -1,71 +1,133 @@
 <app-navbar [NameRoute]="'Detalle de Cita'" [href]="'/citas-medicas'" />
 
-
 <ion-content [fullscreen]="true">
   <div class="container-div" *ngIf="cita">
-    <ion-img class="icon-img" src="../../../../assets/img/cita-medica.png"></ion-img>
-    <ion-label class="label-titulo" color="tertiary">Titulo: {{cita.titulo|titlecase}} </ion-label>
-    <ion-badge class="label-doctor label-estado-1" color="success">Nombre de Doctor: {{cita.medico.usuario.nombre|titlecase}} </ion-badge>
-    <ion-badge class="label-doctor label-estado-1" color="success">Especialidad: {{cita.medico.especialidad.nombre|titlecase}} </ion-badge>
-    <br>
-    <ion-label class="label-lapso" color="dark">Hora Inicio: {{cita.hora_inicio}} </ion-label>
-    <br>
-    <ion-label class="label-duracion" color="dark">Hora Fin: {{cita.hora_fin}} </ion-label>
-    <br><br><br>
-    <ion-label color="dark" *ngFor="let recetas of cita.receta">Receta: {{recetas.nombre_medicamento}}</ion-label>
-    <br>
-    <ion-label color="dark" *ngFor="let recetas of cita.cita_observacion">Observación: {{recetas.contenido}}</ion-label>
-    <br><br><br><br>
+    <ion-img
+      class="icon-img"
+      src="../../../../assets/img/cita-medica.png"
+    ></ion-img>
+    <ion-label class="label-titulo" color="tertiary"
+      >Titulo: {{cita.titulo|titlecase}}
+    </ion-label>
+    <ion-badge class="label-doctor label-estado-1" color="success"
+      >Nombre de Doctor: {{cita.medico.usuario.nombre|titlecase}}
+    </ion-badge>
+    <ion-badge class="label-doctor label-estado-1" color="success"
+      >Especialidad: {{cita.medico.especialidad.nombre|titlecase}}
+    </ion-badge>
+    <br />
+    <ion-label class="label-lapso" color="dark"
+      >Hora Inicio: {{cita.hora_inicio}}
+    </ion-label>
+    <br />
+    <ion-label class="label-duracion" color="dark"
+      >Hora Fin: {{cita.hora_fin}}
+    </ion-label>
+    <br /><br /><br />
+    <ion-label color="dark" *ngFor="let recetas of cita.receta"
+      >Receta: {{recetas.nombre_medicamento}}</ion-label
+    >
+    <br />
+    <ion-label color="dark" *ngFor="let recetas of cita.cita_observacion"
+      >Observación: {{recetas.contenido}}</ion-label
+    >
+    <br /><br /><br /><br />
     <ion-label color="dark">Estado: {{cita.estado_cita.nombre}}</ion-label>
-    <br><br>
-    <ion-label color="dark" *ngFor="let resenia of cita.resenia">Calificación: {{resenia.calificacion}}</ion-label>
+    <br /><br />
+    <ion-label color="dark" *ngFor="let resenia of cita.resenia"
+      >Calificación: {{resenia.calificacion}}</ion-label
+    >
     <ion-fab class="edit">
-        <ion-fab-button (click)=" EditMecament()" color="warning">
-            <ion-icon name="create"></ion-icon>
-        </ion-fab-button>
+      <ion-fab-button (click)=" EditMecament()" color="warning">
+        <ion-icon name="create"></ion-icon>
+      </ion-fab-button>
     </ion-fab>
 
     <ion-fab class="close">
-        <ion-fab-button (click)="DeleteMedicament()" color="danger">
-            <ion-icon name="close"></ion-icon>
-        </ion-fab-button>
+      <ion-fab-button (click)="DeleteMedicament()" color="danger">
+        <ion-icon name="close"></ion-icon>
+      </ion-fab-button>
     </ion-fab>
 
-    <ion-button color="dark" [routerLink]="['/resenia-crear',id]">Crear Reseña</ion-button>
-
-</div>
-
-
-<form *ngIf="StateForm" [formGroup]="FormCitasMedicasEditar" (ngSubmit)="UpdateMedicament(FormCitasMedicasEditar.value)">
-    <ion-item>
-        <ion-icon name="leaf"></ion-icon>
-
-        <!-- Inputs de titulo -->
-        <ion-input formControlName="titulo" class="inputs" label="Titulo de la Cita" labelPlacement="floating" placeholder="Problemas Cárdiacos"></ion-input>
-    </ion-item>
-    <div class="mt-1" *ngIf="FormCitasMedicasEditar.get('titulo')?.invalid && FormCitasMedicasEditar.get('titulo')?.touched">
-      <ion-badge *ngIf="FormCitasMedicasEditar.get('titulo')?.hasError('required')" color="warning">Campo Requerido</ion-badge>
+    <ion-button color="dark" [routerLink]="['/resenia-crear',id]"
+      >Crear Reseña</ion-button
+    >
   </div>
+
+  <form
+    *ngIf="StateForm"
+    [formGroup]="FormCitasMedicasEditar"
+    (ngSubmit)="UpdateMedicament(FormCitasMedicasEditar.value)"
+  >
+    <ion-item>
+      <ion-icon name="leaf"></ion-icon>
+
+      <!-- Inputs de titulo -->
+      <ion-input
+        formControlName="titulo"
+        class="inputs"
+        label="Titulo de la Cita"
+        labelPlacement="floating"
+        placeholder="Problemas Cárdiacos"
+      ></ion-input>
+    </ion-item>
+    <div
+      class="mt-1"
+      *ngIf="FormCitasMedicasEditar.get('titulo')?.invalid && FormCitasMedicasEditar.get('titulo')?.touched"
+    >
+      <ion-badge
+        *ngIf="FormCitasMedicasEditar.get('titulo')?.hasError('required')"
+        color="warning"
+        >Campo Requerido</ion-badge
+      >
+    </div>
 
     <!-- Input de Hora Inicio -->
     <ion-item>
-        <ion-icon name="time"></ion-icon>
-        <ion-input formControlName="hora_inicio" class="inputs" label="Hora de Entrada" labelPlacement="floating" placeholder="2:00 pm" type="time"></ion-input>
+      <ion-icon name="time"></ion-icon>
+      <ion-input
+        formControlName="hora_inicio"
+        class="inputs"
+        label="Hora de Entrada"
+        labelPlacement="floating"
+        placeholder="2:00 pm"
+        type="time"
+      ></ion-input>
     </ion-item>
-    <div class="mt-1" *ngIf="FormCitasMedicasEditar.get('hora_inicio')?.invalid && FormCitasMedicasEditar.get('hora_inicio')?.touched">
-      <ion-badge *ngIf="FormCitasMedicasEditar.get('hora_inicio')?.hasError('required')" color="warning">Campo Requerido</ion-badge>
-  </div>
-
+    <div
+      class="mt-1"
+      *ngIf="FormCitasMedicasEditar.get('hora_inicio')?.invalid && FormCitasMedicasEditar.get('hora_inicio')?.touched"
+    >
+      <ion-badge
+        *ngIf="FormCitasMedicasEditar.get('hora_inicio')?.hasError('required')"
+        color="warning"
+        >Campo Requerido</ion-badge
+      >
+    </div>
 
     <!-- Input de hora_fin -->
 
     <ion-item>
-        <ion-icon name="alarm-outline"></ion-icon>
-        <ion-input formControlName="hora_fin" class="inputs" label="Hora de Salida" labelPlacement="floating" placeholder="17:00 pm" type="time"></ion-input>
+      <ion-icon name="alarm-outline"></ion-icon>
+      <ion-input
+        formControlName="hora_fin"
+        class="inputs"
+        label="Hora de Salida"
+        labelPlacement="floating"
+        placeholder="17:00 pm"
+        type="time"
+      ></ion-input>
     </ion-item>
-    <div class="mt-1" *ngIf="FormCitasMedicasEditar.get('hora_fin')?.invalid && FormCitasMedicasEditar.get('hora_fin')?.touched">
-      <ion-badge *ngIf="FormCitasMedicasEditar.get('hora_fin')?.hasError('required')" color="warning">Campo Requerido</ion-badge>
-  </div>
+    <div
+      class="mt-1"
+      *ngIf="FormCitasMedicasEditar.get('hora_fin')?.invalid && FormCitasMedicasEditar.get('hora_fin')?.touched"
+    >
+      <ion-badge
+        *ngIf="FormCitasMedicasEditar.get('hora_fin')?.hasError('required')"
+        color="warning"
+        >Campo Requerido</ion-badge
+      >
+    </div>
 
     <!-- Input medico_id -->
     <ion-item>
@@ -90,18 +152,14 @@
       >
     </div>
 
-
-    <ion-button  color="medium" type="submit" [disabled]="FormCitasMedicasEditar.invalid">
-        Actualizar
-        <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
+    <ion-button
+      color="medium"
+      type="submit"
+      [disabled]="FormCitasMedicasEditar.invalid"
+    >
+      Actualizar
+      <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
     </ion-button>
-</form>
+  </form>
 
-
-    <!-- Para regresar atrás -->
-    <!-- <ion-fab [routerLink]="['/citas-medicas']" slot="fixed" horizontal="end" vertical="bottom">
-      <ion-fab-button color="dark">
-        <ion-icon name="chevron-back"></ion-icon>
-      </ion-fab-button>
-  </ion-fab> -->
 </ion-content>
