--- a/src/app/private/pages/antedecentes-medicos-detalle/antedecentes-medicos-detalle.page.html
+++ b/src/app/private/pages/antedecentes-medicos-detalle/antedecentes-medicos-detalle.page.html
@@ -131,7 +131,7 @@
 
 
         <ion-button [disabled]="FormAntecedentesDetalle.invalid" color="medium" type="submit">
-            Actualizar
+            Actualizar Antecentes Médicos
             <ion-icon class="ion-icon-create" slot="end" name="create"></ion-icon>
         </ion-button>
 
