--- a/src/app/private/pages/antedecentes-medicos-detalle/antedecentes-medicos-detalle.page.scss
+++ b/src/app/private/pages/antedecentes-medicos-detalle/antedecentes-medicos-detalle.page.scss
@@ -33,10 +33,11 @@ h2 {
 
 .datos {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 42%;
+    left: 40%;
     transform: translate(-50%, -50%);
     align-items: center;
+    font-size: 20px;
 }
 
 .acciones {
@@ -48,14 +49,22 @@ h2 {
 
 .close {
     margin-left: 160px;
-    margin-top: 240px;
+    margin-top: 200px;
 }
 
 .edit {
     margin-left: 70px;
-    margin-top: 240px;
+    margin-top: 200px;
 }
 
 ion-badge {
     margin-left: 30px;
+}
+
+span{
+    font-weight: 900;
+}
+
+.cirujias_previas-text{
+    margin-left: 1.5px;
 }
