Diseño en pasarela de pago añadida

--- a/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
+++ b/src/app/private/pages/cita-medicas-detalle/cita-medicas-detalle.page.html
@@ -33,6 +33,7 @@
 
     <ion-button color="dark" [routerLink]="['/resenia-crear',id]">Crear Reseña</ion-button>
 
+    <ion-button color="success" [routerLink]="['/pagos-crear',cita.id,cita.medico.id]">Realizar Pago</ion-button>
 </div>
 
 
